--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chai": "^3.5.0",
     "eslint": "^2.13.1",
     "eslint-config-bitnami": "bitnami/eslint-config-bitnami#v1.0.0",
+    "eslint-plugin-import": "^1.14.0",
     "gulp": "^3.9.1",
     "run-sequence": "^1.2.1"
   }
