--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Command line parser",
   "main": "index.js",
   "repository": {
-    "type" : "git", "url" : "https://github.com/bitnami/node-cmd-parser.git"
+    "type": "git",
+    "url": "https://github.com/bitnami/node-cmd-parser.git"
   },
   "scripts": {
     "test": "gulp test",
@@ -21,28 +22,12 @@
     "printf": "^0.2.3"
   },
   "devDependencies": {
-    "babel-eslint": "^6.0.5",
-    "babel-preset-es2015": "^6.9.0",
+    "bitnami-gulp-common-tasks": "bitnami/gulp-common-tasks#v2.0.1",
     "chai": "^3.5.0",
-    "chai-fs": "git+https://github.com/bitnami/chai-fs.git",
-    "del": "^2.2.1",
     "eslint": "^2.13.1",
-    "eslint-config-airbnb-base": "^3.0.1",
-    "eslint-html-reporter": "^0.5.2",
-    "eslint-plugin-import": "^1.8.1",
-    "eslint-teamcity": "^1.1.0",
+    "eslint-config-bitnami": "bitnami/eslint-config-bitnami#v1.0.0",
+    "eslint-plugin-import": "^1.14.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-eslint": "^2.0.0",
-    "gulp-istanbul": "^1.0.0",
-    "gulp-mocha": "^2.2.0",
-    "nami-test": "^0.0.1",
-    "intercept-stdout": "^0.1.2",
-    "istanbul": "^0.4.4",
-    "mocha": "^2.5.3",
-    "mocha-teamcity-cov-reporter": "^0.0.1",
-    "mocha-teamcity-reporter": "^1.0.0",
-    "run-sequence": "^1.2.1",
-    "tmp": "^0.0.28"
+    "run-sequence": "^1.2.1"
   }
 }
